--- a/SchoolDiarySystem/SchoolDiarySystem.csproj
+++ b/SchoolDiarySystem/SchoolDiarySystem.csproj
@@ -123,6 +123,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\ClassController.cs" />
+    <Compile Include="Controllers\CommentController.cs" />
     <Compile Include="Controllers\ParentController.cs" />
     <Compile Include="Controllers\RoomController.cs" />
     <Compile Include="Controllers\StudentController.cs" />
@@ -135,6 +136,7 @@
     <Compile Include="DAL\CommentsDAL.cs" />
     <Compile Include="DAL\DataBase\DataConnection.cs" />
     <Compile Include="DAL\ParentsDAL.cs" />
+    <Compile Include="DAL\ReviewsDAL.cs" />
     <Compile Include="DAL\RolesDAL.cs" />
     <Compile Include="DAL\RoomsDAL.cs" />
     <Compile Include="DAL\StudentsDAL.cs" />
@@ -153,6 +155,7 @@
     <Compile Include="Models\ClassSchedules.cs" />
     <Compile Include="Models\Comments.cs" />
     <Compile Include="Models\Parents.cs" />
+    <Compile Include="Models\Reviews.cs" />
     <Compile Include="Models\Roles.cs" />
     <Compile Include="Models\Rooms.cs" />
     <Compile Include="Models\Students.cs" />
@@ -321,6 +324,10 @@
     <Content Include="Views\Topic\Update.cshtml" />
     <Content Include="Views\Topic\Details.cshtml" />
     <Content Include="Views\Topic\Delete.cshtml" />
+    <Content Include="Views\Comment\Index.cshtml" />
+    <Content Include="Views\Comment\Create.cshtml" />
+    <Content Include="Views\Comment\Update.cshtml" />
+    <Content Include="Views\Comment\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
