--- a/SchoolDiarySystem/SchoolDiarySystem.csproj
+++ b/SchoolDiarySystem/SchoolDiarySystem.csproj
@@ -330,6 +330,9 @@
     <Content Include="Views\Comment\Update.cshtml" />
     <Content Include="Views\Comment\Details.cshtml" />
     <Content Include="Views\Review\Index.cshtml" />
+    <Content Include="Views\Comment\Review.cshtml" />
+    <Content Include="Views\Review\Update.cshtml" />
+    <Content Include="Views\Review\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
