--- a/SchoolDiarySystem/SchoolDiarySystem.csproj
+++ b/SchoolDiarySystem/SchoolDiarySystem.csproj
@@ -124,6 +124,7 @@
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\ClassController.cs" />
     <Compile Include="Controllers\CommentController.cs" />
+    <Compile Include="Controllers\DirectorController.cs" />
     <Compile Include="Controllers\ParentController.cs" />
     <Compile Include="Controllers\ReviewController.cs" />
     <Compile Include="Controllers\RoomController.cs" />
@@ -345,6 +346,7 @@
     <Content Include="Views\User\CreateAdmin.cshtml" />
     <Content Include="Views\User\Update.cshtml" />
     <Content Include="Views\User\Details.cshtml" />
+    <Content Include="Views\Director\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
