--- a/SchoolDiarySystem/SchoolDiarySystem.csproj
+++ b/SchoolDiarySystem/SchoolDiarySystem.csproj
@@ -234,6 +234,8 @@
     <Content Include="Content\js\google-marker-map.js" />
     <Content Include="Content\js\JavaScript.js" />
     <Content Include="Content\js\jquery-3.3.1.min.js" />
+    <Content Include="Content\js\jquery-jvectormap-2.0.3.min.js" />
+    <Content Include="Content\js\jquery-jvectormap-world-mill.js" />
     <Content Include="Content\js\jquery.counterup.min.js" />
     <Content Include="Content\js\jquery.dataTables.min.js" />
     <Content Include="Content\js\jquery.scrollUp.min.js" />
@@ -364,7 +366,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
-    <Content Include="Content\bootstrap.min.css.map" />
+    <Content Include="Content\css\bootstrap.min.css.map" />
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
