--- a/SchoolDiarySystem/SchoolDiarySystem.csproj
+++ b/SchoolDiarySystem/SchoolDiarySystem.csproj
@@ -358,6 +358,7 @@
     <Content Include="Views\MyKids\Index.cshtml" />
     <Content Include="Views\Professor\Index.cshtml" />
     <Content Include="Views\Class\Details.cshtml" />
+    <Content Include="Views\Comment\ReviewDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
