--- a/SchoolDiarySystem/SchoolDiarySystem.csproj
+++ b/SchoolDiarySystem/SchoolDiarySystem.csproj
@@ -359,6 +359,7 @@
     <Content Include="Views\Professor\Index.cshtml" />
     <Content Include="Views\Class\Details.cshtml" />
     <Content Include="Views\Comment\ReviewDetails.cshtml" />
+    <Content Include="Views\Review\CommentList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
