--- a/SchoolDiarySystem/SchoolDiarySystem.csproj
+++ b/SchoolDiarySystem/SchoolDiarySystem.csproj
@@ -227,6 +227,7 @@
     <Content Include="Content\img\logo.png" />
     <Content Include="Content\img\logo1.png" />
     <Content Include="Content\img\logo2.png" />
+    <Content Include="Content\img\logoSchool.png" />
     <Content Include="Content\img\preloader.gif" />
     <Content Include="Content\js\bootstrap.min.js" />
     <Content Include="Content\js\Chart.min.js" />
