--- a/SchoolDiarySystem/SchoolDiarySystem.csproj
+++ b/SchoolDiarySystem/SchoolDiarySystem.csproj
@@ -331,7 +331,7 @@
     <Content Include="Views\Comment\Create.cshtml" />
     <Content Include="Views\Comment\Update.cshtml" />
     <Content Include="Views\Review\Index.cshtml" />
-    <Content Include="Views\Review\Review.cshtml" />
+    <Content Include="Views\Review\ReviewComment.cshtml" />
     <Content Include="Views\Review\Update.cshtml" />
     <Content Include="Views\Shared\_LayoutTeacher.cshtml" />
     <Content Include="Views\Shared\_LayoutDirector.cshtml" />
@@ -351,6 +351,7 @@
     <Content Include="Views\MyKids\IndexAbsence.cshtml" />
     <Content Include="Views\MyKids\IndexComment.cshtml" />
     <Content Include="Views\MyKids\IndexSchedule.cshtml" />
+    <Content Include="Views\MyKids\TeacherDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
