--- a/SchoolDiarySystem/SchoolDiarySystem.csproj
+++ b/SchoolDiarySystem/SchoolDiarySystem.csproj
@@ -161,6 +161,8 @@
     <Compile Include="Models\Comments.cs" />
     <Compile Include="Models\Dashboard\Statistics.cs" />
     <Compile Include="Models\DataAnnotations\CheckPhoneNo.cs" />
+    <Compile Include="Models\DataAnnotations\StudentsBirthDate.cs" />
+    <Compile Include="Models\DataAnnotations\TeacherBirthDate.cs" />
     <Compile Include="Models\DataAnnotations\ValidateClassNo.cs" />
     <Compile Include="Models\DataAnnotations\Validation.cs" />
     <Compile Include="Models\Parents.cs" />
