--- a/SchoolDiarySystem/Web.config
+++ b/SchoolDiarySystem/Web.config
@@ -11,7 +11,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
   <connectionStrings>
-    <add name="diaryConnStr" connectionString="Data Source=DESKTOP-C9V24QP\SQLEXPRESS;Initial Catalog=SchoolDiarySystem;integrated security=True;" providerName="System.Data.EntityClient" />
+    <add name="diaryConnStr" connectionString="Data Source=DESKTOP-C9V24QP\SQLEXPRESS;Initial Catalog=DiarySystem;integrated security=True;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
